package edu.fiuba.algo3.modelo;

public interface Palo {
    public boolean sonDelMismoPalo(Poker carta);
}
